objects/New_test__c.object
<CustomObject>
    <fields>
        <fullName>DeleteFromGitTest_del__c</fullName>
        <label>DeleteFromGitTest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>efgh</fullName>
                </value>
                <value>
                    <fullName>abc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merge_Test1__c</fullName>
        <label>Merge Test1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Merge_Test2__c</fullName>
        <label>Merge Test2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nutanix_Picklist__c</fullName>
        <label>Nutanix Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>20520</fullName>
                </value>
                <value>
                    <fullName>20521</fullName>
                </value>
                <value>
                    <fullName>20522</fullName>
                </value>
                <value>
                    <fullName>20523</fullName>
                </value>
                <value>
                    <fullName>20524</fullName>
                </value>
                <value>
                    <fullName>20525</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Test__c</fullName>
        <inlineHelpText>Testing Changes</inlineHelpText>
        <label>Picklist Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
                <value>
                    <fullName>d</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_AN__c</fullName>
        <label>Sample AN</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sample_Email__c</fullName>
        <label>Sample Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Test_Formula__c</fullName>
        <formula>Name  &amp;  Sample_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Formula</label>
        <type>Text</type>
    </fields>
    <label>New test</label>
    <nameField>
        <label>New test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New test</pluralLabel>
    <recordTypes>
        <fullName>Sample</fullName>
        <active>true</active>
        <label>Sample</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>